<?xml version="1.0"?>
<package>
  <name>semi_static_transform_publisher</name>
  <version>1.0.0</version>
  <description>
      Static transform publisher with a service to update the transform.
  </description>

  <maintainer email="kguerin2@jhu.edu">Kel Guerin</maintainer>
  <license>BSD</license>
  <author>Kel Guerin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>